<resources>
    <string name="app_name">e-RecApp</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="dateerror">Enter a valid date</string>
    <string name="ageerror">Enter a valid age</string>
    <string name="title_activity_user_main_page">UserMainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="error">This field cannot be empty</string>
    <string-array name="country">

        <item>Please select country</item>
        <item>India</item>

    </string-array>

    <string-array name="state">

        <item>Please select state</item>
        <item>Andhra Pradesh(AP)</item>
        <item>Arunachal Pradesh(AR)</item>
        <item>Assam (AS)</item>
        <item> Bihar (BR)</item>
        <item>Chhattisgarh (CG)</item>
        <item>Goa (GA)</item>
        <item>Gujarat (GJ)</item>
        <item>Haryana (HR)</item>
        <item>Himachal Pradesh (HP)</item>
        <item>Jammu and Kashmir (JK)</item>
        <item>Jharkhand (JH)</item>
        <item>Karnataka (KA)</item>
        <item>Kerala (KL)</item>
        <item>Madhya Pradesh (MP)</item>
        <item>Maharashtra (MH)</item>
        <item>Manipur (MN)</item>
        <item>Meghalaya (ML)</item>
        <item>Mizoram (MZ)</item>
        <item>Nagaland (NL)</item>
        <item>Odisha(OR)</item>
        <item>Punjab (PB)</item>
        <item>Rajasthan (RJ)</item>
        <item>Sikkim (SK)</item>
        <item>Tamil Nadu (TN)</item>
        <item>Telangana (TS)</item>
        <item>Tripura (TR)</item>
        <item>Uttar Pradesh (UP)</item>
        <item>Uttarakhand (UK)</item>
        <item>West Bengal (WB)</item>

    </string-array>
    <string-array name="category">
        <item>Please select category</item>
        <item>General</item>
        <item>SC</item>
        <item>ST</item>
        <item>OBC</item>

    </string-array>

    <string-array name="marital_status">
        <item>Please select marital status</item>
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Other</item>

    </string-array>


    <string-array name="division">

        <item>Division</item>
        <item>I</item>
        <item>II</item>
        <item>III</item>
    </string-array>

    <string-array name="year_of_passing">

        <item>Select the year of passing</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>


    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_new_navigation">NewNavigation</string>
    <string name="title_activity_new_admin">NewAdminActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="AboutPRSC">About PRSC</string>

    <string name="Aboutprsc">Punjab Remote Sensing Cetntre (PRSC), an autonomous organization under the Department of Agriculture, Government of Punjab,
    is an apex body in the state for all Remote Sensing(RS), Geographic Information System(GIS), Global Positioning System and related works</string>

    <string name="e_Rec">PRSC e-Recruitment:</string>

    <string name="AboutUsText">This application enables job seekers to apply for various available vacancies in PRSC .
     Thus the whole procedure of registration and online test can be taken on their personal mobile phones.</string>
    <string name="AbtUsNext">Users can apply for jobs in following steps:
</string>


    <string name="Login">Register/Login</string>
    <string name="loginData">Using username and password. People logging in for the first time will provide their required details .</string>
    <string name="ApplyJob">Apply for suitable </string>
    <string name="applyJobData">The registered candidates can apply for various posts(shown in Latest Advertisements) in PRSC according to their skillset. </string>
    <string name="OnlineTest">Online Test</string>
    <string name="OnlineTestData">The applicants will be taking an online test through the app. Online results will be calculated and candidate selection will be done according to their marks and vacancies.
Selected candidates will be notified for further procedure. </string>


</resources>


